Fix logo link to root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="bg-[#4C46C7] relative">
         <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-            <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+            <a href="./" class="flex-shrink-0 cursor-pointer">
                 <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
                     style="cursor: pointer;">
             </a>
