--- a/hospitalclinicbilling.html
+++ b/hospitalclinicbilling.html
@@ -11,9 +11,9 @@
 </head>
 
 <body class="bg-white min-h-screen font-[Catamaran]">
-  <header class="bg-[#4C46C7] relative">
+  <header class="bg-[#4C46C7] sticky top-0 z-50">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-      <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+      <a href="./index.html" class="flex-shrink-0 cursor-pointer">
         <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
           style="cursor: pointer;">
       </a>
@@ -635,7 +635,7 @@
       </div>
     </div>
     <div class="mt-10 sm:mt-16 md:mt-20 flex justify-center">
-      <a href="#"
+      <a href="./contact-us.html"
         class="px-6 md:px-8 py-3 md:py-4 rounded-md bg-[#5D38BB] opacity-100 flex items-center justify-center text-white font-bold text-sm sm:text-base md:text-lg leading-normal">
         Connect with us
       </a>
@@ -775,15 +775,15 @@
     <p class="text-[#4C46C7] font-catamaran font-[500] text-[36px] md:text-[44px] leading-[50px] tracking-tight">
       Looking to learn more about Medserv?
     </p>
-    <button
+    <a href="./contact-us.html"
       class="bg-[#4C46C7] px-6 py-3 rounded-full shadow hover:bg-[#3932A6] transition text-white font-catamaran font-[500] text-[19px] leading-[33px]">
       Connect with us
-    </button>
+    </a>
   </section>
   <footer class="bg-[#4C46C7] text-white">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 pt-10">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-10 py-16">
-        <a href="./homepage.html" class="flex justify-start md:justify-start">
+        <a href="./index.html" class="flex justify-start md:justify-start">
           <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[180px] h-[80px] object-contain">
         </a>
         <div class="space-y-5">
