--- a/news.html
+++ b/news.html
@@ -14,9 +14,9 @@
 </head>
 
 <body class="bg-white text-gray-800 font-[Catamaran]">
-  <header class="bg-[#4C46C7] relative">
+  <header class="bg-[#4C46C7] sticky top-0 z-50">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-      <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+      <a href="./index.html" class="flex-shrink-0 cursor-pointer">
         <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
           style="cursor: pointer;">
       </a>
@@ -201,10 +201,10 @@
               Now available for both Android and iOS, the Medserv App revolutionizes patient information
               management, payment processing, and claims handling–all within a single...
             </p>
-            <!-- <a href="./individualNewsPage.html"
+            <a href="./individualNewsPage.html"
               class="font-[Catamaran] font-medium text-[16px] leading-[20.21px] tracking-[-0.16px] text-right text-[#343434] hover:underline flex items-center justify-end">
               Read More <span class="ml-2">→</span>
-            </a> -->
+            </a>
           </div>
         </div>
 
@@ -227,10 +227,10 @@
               Now available for both Android and iOS, the Medserv App revolutionizes patient information
               management, payment processing, and claims handling–all within a single, secure platform...
             </p>
-            <!-- <a href="./individualNewsPage.html"
+            <a href="./individualNewsPage.html"
               class="font-[Catamaran] font-medium text-[16px] leading-[20.21px] tracking-[-0.16px] text-right text-[#343434] hover:underline flex items-center justify-end">
               Read More <span class="ml-2">→</span>
-            </a> -->
+            </a>
           </div>
         </div>
 
@@ -250,10 +250,10 @@
               yesterday we launched in September 2024, and what an exciting journey it has been! Looking
               back on our growth...
             </p>
-            <!-- <a href="./individualNewsPage.html"
+            <a href="./individualNewsPage.html"
               class="font-[Catamaran] font-medium text-[16px] leading-[20.21px] tracking-[-0.16px] text-right text-[#343434] hover:underline flex items-center justify-end">
               Read More <span class="ml-2">→</span>
-            </a> -->
+            </a>
           </div>
         </div>
 
@@ -273,10 +273,10 @@
               yesterday we launched in September 2024, and what an exciting journey it has been! Looking
               back on our growth...
             </p>
-            <!-- <a href="./individualNewsPage.html"
+            <a href="./individualNewsPage.html"
               class="font-[Catamaran] font-medium text-[16px] leading-[20.21px] tracking-[-0.16px] text-right text-[#343434] hover:underline flex items-center justify-end">
               Read More <span class="ml-2">→</span>
-            </a> -->
+            </a>
           </div>
         </div>
 
@@ -326,7 +326,7 @@
   <footer class="bg-[#4C46C7] text-white">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 pt-10">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-10 py-16">
-        <a href="./homepage.html" class="flex justify-start md:justify-start">
+        <a href="./index.html" class="flex justify-start md:justify-start">
           <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[180px] h-[80px] object-contain">
         </a>
         <div class="space-y-5">
