--- a/reviews.html
+++ b/reviews.html
@@ -15,9 +15,9 @@
 
 <body class="bg-white text-gray-800 font-[Catamaran]">
 
-  <header class="bg-[#4C46C7] relative">
+  <header class="bg-[#4C46C7] sticky top-0 z-50">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-      <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+      <a href="./index.html" class="flex-shrink-0 cursor-pointer">
         <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
           style="cursor: pointer;">
       </a>
@@ -407,7 +407,7 @@
   <footer class="bg-[#4C46C7] text-white">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 pt-10">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-10 py-16">
-        <a href="./homepage.html" class="flex justify-start md:justify-start">
+        <a href="./index.html" class="flex justify-start md:justify-start">
           <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[180px] h-[80px] object-contain">
         </a>
         <div class="space-y-5">
