--- a/contact-us.html
+++ b/contact-us.html
@@ -11,9 +11,9 @@
 
 <body class="font-sans text-gray-800">
 
-  <header class="bg-[#4C46C7] relative">
+  <header class="bg-[#4C46C7] sticky top-0 z-50">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-      <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+      <a href="./index.html" class="flex-shrink-0 cursor-pointer">
         <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
           style="cursor: pointer;">
       </a>
@@ -197,14 +197,14 @@
                   class="font-catamaran font-semibold text-[28px] leading-[120%] tracking-[0.57px] text-[#343434] align-middle">
                   Patient Support
                 </h3>
-                <p
-                  class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran]">
+                <a href="./onlineBillPayment.html"
+                  class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran] hover:underline">
                   Pay Your Bill Online
-                </p>
-                <p
-                  class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran]">
+                </a>
+                <a href="./faqs.html"
+                  class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran] hover:underline">
                   FAQ
-                </p>
+                </a>
               </div>
             </div>
             <span
@@ -224,10 +224,12 @@
                   Technical Support</h3>
                 <p
                   class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran]">
-                </p>Speak to a member of our Support team</p>
+                  Speak to a member of our Support team
+                </p>
                 <p
                   class="font-[400] text-[18px] leading-[150%] tracking-[0.57px] align-middle text-[#86898C] font-[Catamaran]">
-                </p>Email Us</p>
+                  Email Us
+                </p>
               </div>
             </div>
             <span
@@ -361,7 +363,7 @@
               <rect x="7" y="2.5" width="10" height="19" rx="2" ry="2" />
               <circle cx="12" cy="18" r="0.75" />
             </svg>
-            +353 1 661 9822
+            <a href="tel:+35316619822" class="hover:underline">+353 1 661 9822</a>
           </p>
 
           <!-- Email -->
@@ -372,7 +374,7 @@
               <rect x="3" y="5" width="18" height="14" rx="2" ry="2" />
               <path d="M3 7l9 6 9-6" />
             </svg>
-            info@medserv.ie
+            <a href="mailto:info@medserv.ie" class="hover:underline">info@medserv.ie</a>
           </p>
         </div>
 
@@ -402,7 +404,7 @@
               <rect x="7" y="2.5" width="10" height="19" rx="2" ry="2" />
               <circle cx="12" cy="18" r="0.75" />
             </svg>
-            +442033841952
+            <a href="tel:+442033841952" class="hover:underline">+442033841952</a>
           </p>
 
           <!-- Email -->
@@ -413,7 +415,7 @@
               <rect x="3" y="5" width="18" height="14" rx="2" ry="2" />
               <path d="M3 7l9 6 9-6" />
             </svg>
-            info@medserv.ie
+            <a href="mailto:info@medserv.ie" class="hover:underline">info@medserv.ie</a>
           </p>
         </div>
 
@@ -444,7 +446,7 @@
               <rect x="3" y="5" width="18" height="14" rx="2" ry="2" />
               <path d="M3 7l9 6 9-6" />
             </svg>
-            info@medserv.ie
+            <a href="mailto:info@medserv.ie" class="hover:underline">info@medserv.ie</a>
           </p>
         </div>
 
@@ -473,7 +475,7 @@
               <rect x="7" y="2.5" width="10" height="19" rx="2" ry="2" />
               <circle cx="12" cy="18" r="0.75" />
             </svg>
-            +353 1890 222 777
+            <a href="tel:+3531890222777" class="hover:underline">+353 1890 222 777</a>
           </p>
 
           <!-- Email -->
@@ -484,7 +486,7 @@
               <rect x="3" y="5" width="18" height="14" rx="2" ry="2" />
               <path d="M3 7l9 6 9-6" />
             </svg>
-            info@medserv.ie
+            <a href="mailto:info@medserv.ie" class="hover:underline">info@medserv.ie</a>
           </p>
         </div>
 
@@ -498,7 +500,7 @@
   <footer class="bg-[#4C46C7] text-white">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 pt-10">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-10 py-16">
-        <a href="./homepage.html" class="flex justify-start md:justify-start">
+        <a href="./index.html" class="flex justify-start md:justify-start">
           <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[180px] h-[80px] object-contain">
         </a>
         <div class="space-y-5">
