--- a/individualconsultantbilling.html
+++ b/individualconsultantbilling.html
@@ -12,9 +12,9 @@
 <body class="bg-white text-[#333] font-sans">
 
   <!-- Container -->
-  <header class="bg-[#4C46C7] relative">
+  <header class="bg-[#4C46C7] sticky top-0 z-50">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 py-16 flex items-center justify-between h-[100px]">
-      <a href="./homepage.html" class="flex-shrink-0 cursor-pointer">
+      <a href="./index.html" class="flex-shrink-0 cursor-pointer">
         <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[160px] h-[65px] object-contain"
           style="cursor: pointer;">
       </a>
@@ -191,7 +191,7 @@
 
       <!-- CTA Button -->
       <div class="mt-8 flex justify-center">
-        <a href="#"
+        <a href="./contact-us.html"
           class="font-catamaran font-normal text-[mt-16] md:text-[20.23px] leading-[120%] tracking-[0.94px] text-white bg-[#D900C6] w-full max-w-[363.7px] h-[70.35px] rounded-[81.98px] flex items-center justify-center gap-[3.28px] py-[19.67px] px-[39.35px] hover:bg-[#c000b0] transition">
           Book a free consultation
         </a>
@@ -298,7 +298,7 @@
   <footer class="bg-[#4C46C7] text-white">
     <div class="mx-[8%] lg:mx-[6%] mx-auto px-6 pt-10">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-10 py-16">
-        <a href="./homepage.html" class="flex justify-start md:justify-start">
+        <a href="./index.html" class="flex justify-start md:justify-start">
           <img src="./assets/images/medserv-logo.png" alt="Medserv Logo" class="w-[180px] h-[80px] object-contain">
         </a>
         <div class="space-y-5">
